# perfect-moment

./: .gitignore  PILOT.md  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.claude/: launch.json
.claude/skills/best-frame-extraction/: SKILL.md
.specs/scratchpad/: architecture-3.md  business-2c.md  decomposition-4.md  landing-copy-b2.md  research-2a.md  scoring-research.md  test-log-a8.md  verifications-6.md
.specs/tasks/todo/: perfect-moment-startup-plan.feature.md
dispatcher/: CLAUDE.md  README.md  jobs.csv
dispatcher/tools/: finalize_job.py  run_pipeline.py  scan_inbox.py
landing/: demo-data.json  demo.js  index.html  privacy.html  robots.txt  sitemap.xml  terms.html
perfectmoment/: __main__.py  aesthetics.py  config.py  extract.py  faces.py  output.py  pipeline.py  quality.py  rank.py
perfectmoment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: calibrate.py  fetch_model.py  fetch_nima_weights.py  pick_best_frame.py  pilot_feedback_summary.py
tests/: conftest.py  test_extract.py  test_faces.py  test_output.py  test_pipeline.py  test_quality.py  test_rank.py  test_webapp.py
webapp/: DEPLOY.md  app.py  requirements.txt  start.sh  stop.sh
