[project]
name = "perfectmoment"
version = "0.1.0"
description = "AI pipeline that extracts the best frames from a video."
requires-python = ">=3.10"
dependencies = [
    "opencv-python==5.0.0.93",
    "mediapipe==0.10.35",
    "pyiqa==0.1.15.post2",
    "ImageHash==4.3.2",
    "Pillow==12.3.0",
    "numpy==2.4.6",
]

[project.scripts]
perfectmoment = "perfectmoment.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["perfectmoment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
